# advent-of-code-2020

./: .env.example  .pylintrc  README.md  aoc_2020_1.py  aoc_2020_2.py  main.py  pyproject.toml
solutions/day_1/: solution.py
solutions/day_10/: solution.py
solutions/day_11/: solution.py
solutions/day_12/: solution.py
solutions/day_13/: solution.py
solutions/day_2/: solution.py
solutions/day_3/: solution.py
solutions/day_4/: solution.py
solutions/day_5/: solution.py
solutions/day_6/: solution.py
solutions/day_7/: solution.py
solutions/day_8/: solution.py
solutions/day_9/: solution.py
solutions/utils/: print_answers.py  timing.py
